- improved structure, fixed onload data not showing

--- a/static/styles.css
+++ b/static/styles.css
@@ -303,7 +303,6 @@ body {
 
 .item-chart-upper {
     width: 250px;
-    height: 250px;
 }
 
 .item-chart-lower {
